--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-custom-qr-codes-expo": "^2.2.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-slide-to-unlock": "^0.1.6",
+    "react-native-slider-button": "^0.1.1",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
