--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-slide-to-unlock": "^0.1.6",
     "react-native-slider-button": "^0.1.1",
+    "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1"
   },
