--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-circular-progress-indicator": "^2.0.6",
     "react-native-custom-qr-codes-expo": "^2.2.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
