--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "react-native-custom-qr-codes-expo": "^2.2.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-slide-to-unlock": "^0.1.6",
     "react-native-slider-button": "^0.1.1",
     "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-svg": "^12.3.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.8",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
