--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-circular-progress-indicator": "^2.0.6",
     "react-native-custom-qr-codes-expo": "^2.2.0",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-get-random-values": "^1.7.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "2.6.0",
     "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
@@ -33,7 +35,8 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
